# solinject

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-deploy-docs.yml  build-and-run-tests.yml  release.yml
docs/: Doxyfile.in
include/: solinject-macros.hpp  solinject.hpp
include/solinject/: Configuration.hpp  ConfigurationItem.hpp  ConfigurationParser.hpp  ConfigurationParserToken.hpp  Container.hpp  ContainerBuilder.hpp  DIContainer.hpp  DIMacros.hpp  DIServiceBase.hpp  DISharedService.hpp  DISingletonService.hpp  DITransientService.hpp  DIUtils.hpp  Defines.hpp  FeatureDefinesDocs.hpp  IDIService.hpp  IDIServiceTyped.hpp  IScopedServiceBuilder.hpp  IService.hpp  IServiceTyped.hpp  Macros.hpp  RegisteredServices.hpp  ScopedService.hpp  ScopedServiceBuilder.hpp  ScopedServiceBuilders.hpp  ServiceBase.hpp  SharedService.hpp  Shortcuts.hpp  SingletonService.hpp  TransientService.hpp  Utils.hpp
include/solinject/exceptions/: CircularDependencyException.hpp  DIException.hpp  ServiceNotRegisteredException.hpp
include/solinject/services/: DIRegisteredServices.hpp  DIScopedService.hpp  DIScopedServiceBuilder.hpp  DIScopedServiceBuilders.hpp  DIServiceBase.hpp  DISharedService.hpp  DISingletonService.hpp  DITransientService.hpp  IDIScopedServiceBuilder.hpp  IDIService.hpp  IDIServiceTyped.hpp
scripts/: BuildForAllPlatforms.py  BuildForAllPlatformsUnixMakefiles.py  BuildForAllPlatformsVS.py
scripts/workflows/: GetVersion.py
test/: CMakeLists.txt  TestClasses.h  TestClasses.hpp
test/integration/: ConfigurationParserTests.cpp  ContainerBuilderTests.cpp  ContainerTests.cpp  DIContainerTests.cpp
